# yen-go

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pytest.ini
backend/puzzle_manager/: AGENTS.md  CLAUDE.md  README.md  __init__.py  __main__.py  audit.py  cli.py  exceptions.py  paths.py  pm_logging.py  publish_log.py  pyproject.toml  rollback.py
backend/puzzle_manager/adapters/: __init__.py  _base.py  _registry.py
backend/puzzle_manager/adapters/kisvadim/: __init__.py  adapter.py
backend/puzzle_manager/adapters/local/: __init__.py  adapter.py
backend/puzzle_manager/adapters/sanderland/: __init__.py  adapter.py
backend/puzzle_manager/adapters/travisgk/: __init__.py  adapter.py
backend/puzzle_manager/config/: __init__.py  loader.py  pipeline.json  sources.json  sources.schema.json
backend/puzzle_manager/core/: __init__.py  atomic_write.py  batch_writer.py  board.py  checkpoint.py  classifier.py  collection_assigner.py  complexity.py  constants.py  content_classifier.py  content_db.py  coordinates.py  correctness.py  datetime_utils.py  db_builder.py  db_models.py  edition_detection.py  fs_utils.py  http.py  id_maps.py  katrain_sgf_parser.py  move_alternation.py  naming.py  primitives.py  property_policy.py  puzzle_validator.py  quality.py  schema.py  sgf_builder.py  sgf_parser.py  sgf_publisher.py  sgf_utils.py  sgf_validator.py  source_ingest_db.py  tactical_analyzer.py  tagger.py  text_cleaner.py  trace_map.py  trace_utils.py  validation_stats.py
backend/puzzle_manager/core/enrichment/: __init__.py  _hints_new.py  config.py  hints.py  ko.py  move_order.py  refutation.py  region.py  solution_tagger.py
backend/puzzle_manager/daily/: __init__.py  _helpers.py  by_tag.py  db_writer.py  generator.py  standard.py  timed.py
backend/puzzle_manager/inventory/: __init__.py  check.py  cli.py  manager.py  models.py  rebuild.py  reconcile.py  snapshot.py  taxonomy_mutations.py
backend/puzzle_manager/models/: __init__.py  activity.py  adapter_config.py  config.py  daily.py  enums.py  failures.py  integrity.py  inventory_preview.py  logs.py  ops_catalog.py  previews.py  publish_log.py  puzzle.py  rollback.py  runtime_info.py  source_details.py  source_ingest_state.py  taxonomy.py
backend/puzzle_manager/pipeline/: __init__.py  cleanup.py  coordinator.py  executor.py  lock.py  prerequisites.py
backend/puzzle_manager/scripts/: seed_sample_db.py
backend/puzzle_manager/stages/: __init__.py  analyze.py  ingest.py  protocol.py  publish.py
backend/puzzle_manager/state/: __init__.py  manager.py  models.py
backend/puzzle_manager/tests/: README.md  __init__.py  conftest.py  test_board.py  test_classifier.py  test_config.py  test_coordinates.py  test_enrichment.py  test_inventory_check.py  test_inventory_integration.py  test_inventory_manager.py  test_inventory_models.py  test_inventory_protection.py  test_inventory_publish.py  test_inventory_rebuild.py  test_inventory_rollback.py  test_paths.py  test_primitives.py  test_protocol.py  test_publish_posix.py  test_rollback_posix.py  test_sgf_builder.py  test_sgf_enrichment.py  test_sgf_parser.py  test_stage_metrics.py  test_tagger.py
backend/puzzle_manager/tests/adapters/: test_local.py  test_sanderland.py
backend/puzzle_manager/tests/core/: test_batch_writer.py  test_checkpoint.py  test_source_ingest_db.py
backend/puzzle_manager/tests/fixtures/: __init__.py  run_id.py
backend/puzzle_manager/tests/integration/: test_adapters.py  test_batch_transitions.py  test_cleanup.py  test_cleanup_windows_lock.py  test_cli.py  test_daily.py  test_daily_from_db.py  test_daily_output.py  test_daily_posix.py  test_dedup_detection.py  test_edition_detection.py  test_enrichment_integration.py  test_inventory_check.py  test_inventory_cli.py  test_inventory_integration.py  test_inventory_protection.py  test_inventory_publish.py  test_inventory_rebuild.py  test_performance_benchmarks.py  test_pipeline.py  test_publish_db_wiring.py  test_publish_log_integration.py  test_publish_posix.py  test_publish_robustness.py  test_publish_validation.py  test_rebuild_from_disk.py  test_rollback_posix.py  test_sources.py  test_stage_metrics.py  test_status.py  (+2 more)
(+32870 files in other folders)
